--- a/usher-common/usher-common-inside-package/pom.xml
+++ b/usher-common/usher-common-inside-package/pom.xml
@@ -89,6 +89,11 @@
             </dependency>
             <dependency>
                 <groupId>top.uhyils.usher</groupId>
+                <artifactId>usher-common-util-thread-sync</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>top.uhyils.usher</groupId>
                 <artifactId>usher-common-protocol-mysql</artifactId>
                 <version>${project.version}</version>
             </dependency>
