--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <commons-io.version>2.11.0</commons-io.version>
         <manifold.version>2024.1.35</manifold.version>
         <nacos.config.spring.version>0.3.0-RC</nacos.config.spring.version>
+        <ql.version>3.3.4</ql.version>
     </properties>
 
 
@@ -153,6 +154,11 @@
                 <groupId>com.alibaba.boot</groupId>
                 <artifactId>velocity-spring-boot-starter</artifactId>
                 <version>0.1.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.alibaba</groupId>
+                <artifactId>QLExpress</artifactId>
+                <version>${ql.version}</version>
             </dependency>
 
             <!--编译期重载运算符 manifold-->
