设备控制相关 思考 各种不同的连接如何创建, 先枚举出来总量应该不多

--- a/usher-service/usher-service-external-gateway/pom.xml
+++ b/usher-service/usher-service-external-gateway/pom.xml
@@ -41,6 +41,10 @@
             <artifactId>usher-common-protocol-mysql</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
         <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-test -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
