--- a/usher-service/usher-service-ai-device-manager/pom.xml
+++ b/usher-service/usher-service-ai-device-manager/pom.xml
@@ -24,6 +24,10 @@
         </dependency>
 
         <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>QLExpress</artifactId>
         </dependency>
