--- a/usher-service/usher-web/pom.xml
+++ b/usher-service/usher-web/pom.xml
@@ -128,6 +128,10 @@
         </dependency>
 
         <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
         </dependency>
