--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>top.uhyils.usher</groupId>
     <artifactId>usher</artifactId>
-    <version>2.1.0.4.usher-SNAPSHOT</version>
+    <version>2.1.0.4.usher</version>
     <name>usher</name>
 
     <packaging>pom</packaging>
