--- a/usher-base/usher-base-service/pom.xml
+++ b/usher-base/usher-base-service/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-base</artifactId>
-        <version>2.1.0.4.usher-SNAPSHOT</version>
+        <version>2.1.0.4.usher</version>
     </parent>
     <dependencies>
         <!--引入AOP依赖-->
