--- a/usher-service/usher-service-software/pom.xml
+++ b/usher-service/usher-service-software/pom.xml
@@ -12,7 +12,7 @@
     <parent>
         <artifactId>usher-service</artifactId>
         <groupId>top.uhyils.usher</groupId>
-        <version>2.1.0.4.usher-SNAPSHOT</version>
+        <version>2.1.0.4.usher</version>
     </parent>
     <artifactId>usher-service-software</artifactId>
     <dependencyManagement>
