--- a/usher-api/usher-api-provider-gateway/pom.xml
+++ b/usher-api/usher-api-provider-gateway/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <artifactId>usher-api</artifactId>
         <groupId>top.uhyils.usher</groupId>
-        <version>2.1.0.4.usher</version>
+        <version>2.1.0.5.usher-SNAPSHOT</version>
     </parent>
 
 
