--- a/usher-api/usher-api-provider-software/pom.xml
+++ b/usher-api/usher-api-provider-software/pom.xml
@@ -3,7 +3,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <version>2.1.0.4.usher</version>
+    <version>2.1.0.5.usher-SNAPSHOT</version>
 
     <artifactId>usher-api-provider-software</artifactId>
     <name>usher-api-provider-software</name>
@@ -16,7 +16,7 @@
     <parent>
         <groupId>top.uhyils.usher</groupId>
         <artifactId>usher-api</artifactId>
-        <version>2.1.0.4.usher</version>
+        <version>2.1.0.5.usher-SNAPSHOT</version>
     </parent>
 
 
