--- a/usher-base/usher-base-swagger/pom.xml
+++ b/usher-base/usher-base-swagger/pom.xml
@@ -14,7 +14,7 @@
     <parent>
         <artifactId>usher-base</artifactId>
         <groupId>top.uhyils.usher</groupId>
-        <version>2.1.0.4.usher</version>
+        <version>2.1.0.5.usher-SNAPSHOT</version>
     </parent>
 
     <dependencies>
