--- a/usher-service/usher-service-gateway/pom.xml
+++ b/usher-service/usher-service-gateway/pom.xml
@@ -15,7 +15,7 @@
     <parent>
         <artifactId>usher-service</artifactId>
         <groupId>top.uhyils.usher</groupId>
-        <version>2.1.0.4.usher</version>
+        <version>2.1.0.5.usher-SNAPSHOT</version>
     </parent>
 
     <properties>
