将usher-common-base中spring元素拆解出来 使common-base变成一个纯粹的 无spring依赖的框架, 之前从Spring中获取的环境变量转移到System中获取 在common-base-spring包中扫描spring环境变量 加入system中, 如果不使用common-base-spring则需要手动设置System的变量

--- a/usher-base/usher-base-service/pom.xml
+++ b/usher-base/usher-base-service/pom.xml
@@ -25,7 +25,7 @@
 
         <dependency>
             <groupId>top.uhyils.usher</groupId>
-            <artifactId>usher-common-base</artifactId>
+            <artifactId>usher-common-base-spring</artifactId>
         </dependency>
         <dependency>
             <groupId>top.uhyils.usher</groupId>
