从mysql-protocol中 单独把sql->执行计划,执行计划执行,执行节点关联拆出来独立成一个单独的框架, 单独的框架可以解析现成的sql语句为执行计划,并可以通过其他注入手段形成树状节点结构  底层调用普通节点的逻辑暂时还没有 应该是需要注入方自己实现了

--- a/usher-base/usher-base-inside-package/pom.xml
+++ b/usher-base/usher-base-inside-package/pom.xml
@@ -29,6 +29,11 @@
             </dependency>
             <dependency>
                 <groupId>top.uhyils.usher</groupId>
+                <artifactId>usher-common-base-spring</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>top.uhyils.usher</groupId>
                 <artifactId>usher-base-service</artifactId>
                 <version>${project.version}</version>
             </dependency>
